# RegularizedNeuralEnsemblers

./: .gitignore  README.md  example_simulated_ensemble.py  pyproject.toml
SearchingOptimalEnsembles_experiments/cluster_scripts/slurm_pineda/experiments_confs/: RQ1_ftc_mini_nll.yml
SearchingOptimalEnsembles_experiments/reporter_configs/: report11.yml  report16.yml
examples/: example_sk_classification.py  example_sk_regression.py
neural_ensemblers/: model.py  trainer.py  trainer_args.py
regularized_neural_ensemblers/: model.py  trainer.py  trainer_args.py
